// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea exists 1`] = `
<div
  className="inputContainer"
>
  <textarea
    className="span--100"
    id="super"
    name="superhero"
    onChange={[Function]}
    required={true}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should call onChange with input change 1`] = `
<div
  className="inputContainer"
>
  <textarea
    className="span--100"
    id="super"
    name="superhero"
    required={true}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
      }
    }
    type="text"
    value="New text value!"
  />
</div>
`;

exports[`Textarea should have a label when label is given 1`] = `
<div
  className="inputContainer"
>
  <label
    className="label--field"
    htmlFor="super"
  >
    Super Hero
  </label>
  <textarea
    className="span--100"
    id="super"
    name="superhero"
    onChange={[Function]}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should have a required attribute when specified 1`] = `
<div
  className="inputContainer"
>
  <label
    className="label--field"
    htmlFor="super"
  >
    Super Hero
  </label>
  <textarea
    className="span--100"
    id="super"
    name="superhero"
    onChange={[Function]}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should have helper text when helper text is given 1`] = `
<div
  className="inputContainer"
>
  <label
    className="label--field flush--bottom"
    htmlFor="super"
  >
    Super Hero
  </label>
  <div
    className="helperTextContainer"
  >
    Enter your favorite hero
  </div>
  <textarea
    className="span--100"
    id="super"
    name="superhero"
    onChange={[Function]}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should set its value on input change 1`] = `
<div
  className="inputContainer"
>
  <textarea
    className="span--100"
    id="super"
    name="superhero"
    onChange={[Function]}
    required={true}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should set its value on input change 2`] = `
<div
  className="inputContainer"
>
  <textarea
    className="span--100"
    id="super"
    name="superhero"
    onChange={[Function]}
    required={true}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
      }
    }
    type="text"
    value="New text value!"
  />
</div>
`;
